# diesel_demo

./: Cargo.toml  build.rs
migrations/20170620103016_chatters/: down.sql  up.sql
src/: main.rs  models.rs
storage/: test.db
