[package]
name = "diesel_demo"
version = "0.1.0"
build = "build.rs"
authors = ["wangsijie <wangsijie@bytedance.com>"]

[dependencies]
libsqlite3-sys = { version = "0.8.1", features = ["bundled"] }
diesel = { version = "0.16.0", features = ["sqlite", "large-tables"] }
diesel_codegen = { version = "0.16.0", features = ["sqlite"] }
diesel_infer_schema = { version = "0.16.0", features = ["sqlite"] }
dotenv = "0.8"
time = "0.1"
r2d2 = "0.7.3"
r2d2-diesel = { git = "https://github.com/diesel-rs/r2d2-diesel" }

[replace]
"diesel:0.16.0" = { path = "../diesel/diesel" , features = ["sqlite"] }
"diesel_infer_schema:0.16.0" = { path = "../diesel/diesel_infer_schema" , features = ["sqlite"] }
"diesel_codegen: 0.16.0" = { path = "../diesel/diesel_codegen" , features = ["sqlite"] }
"libsqlite3-sys:0.8.1" = { git = "https://github.com/jgallagher/rusqlite", features = ["bundled"] }
